src/rapidnet-compiler/ol-parser.output
Terminals unused in grammar

   OL_ID
   OL_LCURB
   OL_RCURB


Grammar

    0 $accept: program $end

    1 program: OL_EOF
    2        | clauselist OL_EOF

    3 clauselist: clause
    4           | clause clauselist

    5 clause: rule
    6       | fact
    7       | materialize
    8       | watch
    9       | watchfine
   10       | trace
   11       | TraceTable
   12       | query
   13       | stage
   14       | context

   15 materialize: OL_MATERIALIZE OL_LPAR OL_NAME OL_COMMA tablearg OL_COMMA tablearg OL_COMMA primarykeys OL_RPAR OL_DOT

   16 tablearg: OL_VALUE

   17 primarykeys: OL_KEYS OL_LPAR keylist OL_RPAR
   18            | OL_KEYS OL_LPAR OL_RPAR

   19 keylist: key
   20        | key OL_COMMA keylist

   21 key: OL_VALUE OL_COLON OL_NAME
   22    | OL_VALUE

   23 watch: OL_WATCH OL_LPAR OL_NAME OL_RPAR OL_DOT

   24 watchfine: OL_WATCHFINE OL_LPAR OL_NAME OL_COMMA OL_STRING OL_RPAR OL_DOT

   25 stage: OL_STAGE OL_LPAR OL_STRING OL_COMMA OL_NAME OL_COMMA OL_NAME OL_RPAR OL_DOT

   26 trace: OL_TRACE OL_LPAR OL_NAME OL_RPAR OL_DOT

   27 TraceTable: OL_TRACETABLE OL_LPAR OL_NAME OL_RPAR OL_DOT

   28 fact: functor OL_DOT

   29 rule: namedRule
   30     | unnamedRule

   31 namedRule: OL_NAME unnamedRule

   32 unnamedRule: weightedRule
   33            | unweightedRule

   34 weightedRule: OL_VALUE unweightedRule

   35 unweightedRule: functor OL_IF termlist OL_DOT
   36               | OL_DEL functor OL_IF termlist OL_DOT
   37               | functor OL_IF OL_DEL termlist OL_DOT
   38               | OL_DEL functor OL_DEL OL_IF termlist OL_DOT
   39               | functor OL_IF aggview OL_DOT

   40 context: OL_CONTEXT OL_VAR OL_COLON

   41 query: OL_QUERY functorname functorbody OL_DOT

   42 termlist: term
   43         | term OL_COMMA termlist

   44 term: functor
   45     | assign
   46     | select

   47 functor: functorname functorbody
   48        | OL_VAR OL_SAYS functorname functorbody
   49        | OL_ENCRYPTS functorname functorbody
   50        | OL_ENCRYPTS OL_VAR OL_SAYS functorname functorbody
   51        | functorname functorbody OL_AT OL_VAR
   52        | OL_VAR OL_SAYS functorname functorbody OL_AT OL_VAR
   53        | OL_ENCRYPTS functorname functorbody OL_AT OL_VAR
   54        | OL_ENCRYPTS OL_VAR OL_SAYS functorname functorbody OL_AT OL_VAR

   55 aggview: agg_oper OL_LPAR functorbody OL_COMMA functorbody OL_COMMA functor OL_RPAR

   56 functorname: OL_NAME

   57 functorbody: OL_LPAR OL_RPAR
   58            | OL_LPAR functorargs OL_RPAR

   59 functorargs: functorarg
   60            | functorarg OL_COMMA functorargs
   61            | OL_AT atom
   62            | OL_AT atom OL_COMMA functorargs

   63 functorarg: atom
   64           | aggregate

   65 function: OL_FUNCTION OL_LPAR functionargs OL_RPAR
   66         | OL_FUNCTION OL_LPAR OL_RPAR

   67 functionargs: functionarg
   68             | functionarg OL_COMMA functionargs

   69 functionarg: math_expr
   70            | atom

   71 select: bool_expr

   72 assign: OL_VAR OL_ASSIGN rel_atom
   73       | OL_VAR OL_ASSIGN bool_expr

   74 bool_expr: OL_LPAR bool_expr OL_RPAR
   75          | OL_VAR OL_IN range_expr
   76          | OL_NOT bool_expr
   77          | bool_expr OL_OR bool_expr
   78          | bool_expr OL_AND bool_expr
   79          | rel_atom rel_oper rel_atom

   80 rel_atom: math_expr
   81         | function
   82         | atom

   83 rel_oper: OL_EQ
   84         | OL_NEQ
   85         | OL_GT
   86         | OL_LT
   87         | OL_GTE
   88         | OL_LTE

   89 math_expr: math_expr math_oper math_atom
   90          | math_atom math_oper math_atom

   91 math_atom: atom
   92          | function
   93          | OL_LPAR math_expr OL_RPAR

   94 math_oper: OL_LSHIFT
   95          | OL_RSHIFT
   96          | OL_PLUS
   97          | OL_MINUS
   98          | OL_TIMES
   99          | OL_DIVIDE
  100          | OL_MODULUS
  101          | OL_BITXOR
  102          | OL_BITAND
  103          | OL_BITOR
  104          | OL_BITNOT

  105 range_expr: OL_LPAR range_atom OL_COMMA range_atom OL_RPAR
  106           | OL_LPAR range_atom OL_COMMA range_atom OL_RSQUB
  107           | OL_LSQUB range_atom OL_COMMA range_atom OL_RPAR
  108           | OL_LSQUB range_atom OL_COMMA range_atom OL_RSQUB

  109 range_atom: math_expr
  110           | atom

  111 atom: OL_VALUE
  112     | OL_VAR
  113     | OL_STRING
  114     | OL_NULL

  115 aggregate: agg_oper OL_LT OL_VAR OL_GT
  116          | agg_oper OL_LT OL_AT OL_VAR OL_GT
  117          | agg_oper OL_LT OL_TIMES OL_GT

  118 agg_oper: OL_AGGFUNCNAME


Terminals, with rules where they appear

$end (0) 0
error (256)
OL_OR (258) 77
OL_AND (259) 78
OL_BITOR (260) 103
OL_BITXOR (261) 101
OL_BITAND (262) 102
OL_BITNOT (263) 104
OL_EQ (264) 83
OL_NEQ (265) 84
OL_GT (266) 85 115 116 117
OL_GTE (267) 87
OL_LT (268) 86 115 116 117
OL_LTE (269) 88
OL_LSHIFT (270) 94
OL_RSHIFT (271) 95
OL_PLUS (272) 96
OL_MINUS (273) 97
OL_TIMES (274) 98 117
OL_DIVIDE (275) 99
OL_MODULUS (276) 100
OL_NOT (277) 76
OL_IN (278) 75
OL_ID (279)
OL_ASSIGN (280) 72 73
OL_AT (281) 51 52 53 54 61 62 116
OL_NAME (282) 15 21 23 24 25 26 27 31 56
OL_COMMA (283) 15 20 24 25 43 55 60 62 68 105 106 107 108
OL_DOT (284) 15 23 24 25 26 27 28 35 36 37 38 39 41
OL_EOF (285) 1 2
OL_IF (286) 35 36 37 38 39
OL_STRING (287) 24 25 113
OL_VALUE (288) 16 21 22 34 111
OL_VAR (289) 40 48 50 51 52 53 54 72 73 75 112 115 116
OL_AGGFUNCNAME (290) 118
OL_FUNCTION (291) 65 66
OL_NULL (292) 114
OL_RPAR (293) 15 17 18 23 24 25 26 27 55 57 58 65 66 74 93 105 107
OL_LPAR (294) 15 17 18 23 24 25 26 27 55 57 58 65 66 74 93 105 106
OL_LSQUB (295) 107 108
OL_RSQUB (296) 106 108
OL_LCURB (297)
OL_RCURB (298)
OL_COLON (299) 21 40
OL_DEL (300) 36 37 38
OL_QUERY (301) 41
OL_MATERIALIZE (302) 15
OL_KEYS (303) 17 18
OL_SAYS (304) 48 50 52 54
OL_ENCRYPTS (305) 49 50 53 54
OL_CONTEXT (306) 40
OL_WATCH (307) 23
OL_WATCHFINE (308) 24
OL_STAGE (309) 25
OL_TRACE (310) 26
OL_TRACETABLE (311) 27


Nonterminals, with rules where they appear

$accept (57)
    on left: 0
program (58)
    on left: 1 2, on right: 0
clauselist (59)
    on left: 3 4, on right: 2 4
clause (60)
    on left: 5 6 7 8 9 10 11 12 13 14, on right: 3 4
materialize (61)
    on left: 15, on right: 7
tablearg (62)
    on left: 16, on right: 15
primarykeys (63)
    on left: 17 18, on right: 15
keylist (64)
    on left: 19 20, on right: 17 20
key (65)
    on left: 21 22, on right: 19 20
watch (66)
    on left: 23, on right: 8
watchfine (67)
    on left: 24, on right: 9
stage (68)
    on left: 25, on right: 13
trace (69)
    on left: 26, on right: 10
TraceTable (70)
    on left: 27, on right: 11
fact (71)
    on left: 28, on right: 6
rule (72)
    on left: 29 30, on right: 5
namedRule (73)
    on left: 31, on right: 29
unnamedRule (74)
    on left: 32 33, on right: 30 31
weightedRule (75)
    on left: 34, on right: 32
unweightedRule (76)
    on left: 35 36 37 38 39, on right: 33 34
context (77)
    on left: 40, on right: 14
query (78)
    on left: 41, on right: 12
termlist (79)
    on left: 42 43, on right: 35 36 37 38 43
term (80)
    on left: 44 45 46, on right: 42 43
functor (81)
    on left: 47 48 49 50 51 52 53 54, on right: 28 35 36 37 38 39 44
    55
aggview (82)
    on left: 55, on right: 39
functorname (83)
    on left: 56, on right: 41 47 48 49 50 51 52 53 54
functorbody (84)
    on left: 57 58, on right: 41 47 48 49 50 51 52 53 54 55
functorargs (85)
    on left: 59 60 61 62, on right: 58 60 62
functorarg (86)
    on left: 63 64, on right: 59 60
function (87)
    on left: 65 66, on right: 81 92
functionargs (88)
    on left: 67 68, on right: 65 68
functionarg (89)
    on left: 69 70, on right: 67 68
select (90)
    on left: 71, on right: 46
assign (91)
    on left: 72 73, on right: 45
bool_expr (92)
    on left: 74 75 76 77 78 79, on right: 71 73 74 76 77 78
rel_atom (93)
    on left: 80 81 82, on right: 72 79
rel_oper (94)
    on left: 83 84 85 86 87 88, on right: 79
math_expr (95)
    on left: 89 90, on right: 69 80 89 93 109
math_atom (96)
    on left: 91 92 93, on right: 89 90
math_oper (97)
    on left: 94 95 96 97 98 99 100 101 102 103 104, on right: 89 90
range_expr (98)
    on left: 105 106 107 108, on right: 75
range_atom (99)
    on left: 109 110, on right: 105 106 107 108
atom (100)
    on left: 111 112 113 114, on right: 61 62 63 70 82 91 110
aggregate (101)
    on left: 115 116 117, on right: 64
agg_oper (102)
    on left: 118, on right: 55 115 116 117


State 0

    0 $accept: . program $end

    OL_NAME         shift, and go to state 1
    OL_EOF          shift, and go to state 2
    OL_VALUE        shift, and go to state 3
    OL_VAR          shift, and go to state 4
    OL_DEL          shift, and go to state 5
    OL_QUERY        shift, and go to state 6
    OL_MATERIALIZE  shift, and go to state 7
    OL_ENCRYPTS     shift, and go to state 8
    OL_CONTEXT      shift, and go to state 9
    OL_WATCH        shift, and go to state 10
    OL_WATCHFINE    shift, and go to state 11
    OL_STAGE        shift, and go to state 12
    OL_TRACE        shift, and go to state 13
    OL_TRACETABLE   shift, and go to state 14

    program         go to state 15
    clauselist      go to state 16
    clause          go to state 17
    materialize     go to state 18
    watch           go to state 19
    watchfine       go to state 20
    stage           go to state 21
    trace           go to state 22
    TraceTable      go to state 23
    fact            go to state 24
    rule            go to state 25
    namedRule       go to state 26
    unnamedRule     go to state 27
    weightedRule    go to state 28
    unweightedRule  go to state 29
    context         go to state 30
    query           go to state 31
    functor         go to state 32
    functorname     go to state 33


State 1

   31 namedRule: OL_NAME . unnamedRule
   56 functorname: OL_NAME .

    OL_NAME      shift, and go to state 34
    OL_VALUE     shift, and go to state 3
    OL_VAR       shift, and go to state 4
    OL_DEL       shift, and go to state 5
    OL_ENCRYPTS  shift, and go to state 8

    $default  reduce using rule 56 (functorname)

    unnamedRule     go to state 35
    weightedRule    go to state 28
    unweightedRule  go to state 29
    functor         go to state 36
    functorname     go to state 33


State 2

    1 program: OL_EOF .

    $default  reduce using rule 1 (program)


State 3

   34 weightedRule: OL_VALUE . unweightedRule

    OL_NAME      shift, and go to state 34
    OL_VAR       shift, and go to state 4
    OL_DEL       shift, and go to state 5
    OL_ENCRYPTS  shift, and go to state 8

    unweightedRule  go to state 37
    functor         go to state 36
    functorname     go to state 33


State 4

   48 functor: OL_VAR . OL_SAYS functorname functorbody
   52        | OL_VAR . OL_SAYS functorname functorbody OL_AT OL_VAR

    OL_SAYS  shift, and go to state 38


State 5

   36 unweightedRule: OL_DEL . functor OL_IF termlist OL_DOT
   38               | OL_DEL . functor OL_DEL OL_IF termlist OL_DOT

    OL_NAME      shift, and go to state 34
    OL_VAR       shift, and go to state 4
    OL_ENCRYPTS  shift, and go to state 8

    functor      go to state 39
    functorname  go to state 33


State 6

   41 query: OL_QUERY . functorname functorbody OL_DOT

    OL_NAME  shift, and go to state 34

    functorname  go to state 40


State 7

   15 materialize: OL_MATERIALIZE . OL_LPAR OL_NAME OL_COMMA tablearg OL_COMMA tablearg OL_COMMA primarykeys OL_RPAR OL_DOT

    OL_LPAR  shift, and go to state 41


State 8

   49 functor: OL_ENCRYPTS . functorname functorbody
   50        | OL_ENCRYPTS . OL_VAR OL_SAYS functorname functorbody
   53        | OL_ENCRYPTS . functorname functorbody OL_AT OL_VAR
   54        | OL_ENCRYPTS . OL_VAR OL_SAYS functorname functorbody OL_AT OL_VAR

    OL_NAME  shift, and go to state 34
    OL_VAR   shift, and go to state 42

    functorname  go to state 43


State 9

   40 context: OL_CONTEXT . OL_VAR OL_COLON

    OL_VAR  shift, and go to state 44


State 10

   23 watch: OL_WATCH . OL_LPAR OL_NAME OL_RPAR OL_DOT

    OL_LPAR  shift, and go to state 45


State 11

   24 watchfine: OL_WATCHFINE . OL_LPAR OL_NAME OL_COMMA OL_STRING OL_RPAR OL_DOT

    OL_LPAR  shift, and go to state 46


State 12

   25 stage: OL_STAGE . OL_LPAR OL_STRING OL_COMMA OL_NAME OL_COMMA OL_NAME OL_RPAR OL_DOT

    OL_LPAR  shift, and go to state 47


State 13

   26 trace: OL_TRACE . OL_LPAR OL_NAME OL_RPAR OL_DOT

    OL_LPAR  shift, and go to state 48


State 14

   27 TraceTable: OL_TRACETABLE . OL_LPAR OL_NAME OL_RPAR OL_DOT

    OL_LPAR  shift, and go to state 49


State 15

    0 $accept: program . $end

    $end  shift, and go to state 50


State 16

    2 program: clauselist . OL_EOF

    OL_EOF  shift, and go to state 51


State 17

    3 clauselist: clause .
    4           | clause . clauselist

    OL_NAME         shift, and go to state 1
    OL_VALUE        shift, and go to state 3
    OL_VAR          shift, and go to state 4
    OL_DEL          shift, and go to state 5
    OL_QUERY        shift, and go to state 6
    OL_MATERIALIZE  shift, and go to state 7
    OL_ENCRYPTS     shift, and go to state 8
    OL_CONTEXT      shift, and go to state 9
    OL_WATCH        shift, and go to state 10
    OL_WATCHFINE    shift, and go to state 11
    OL_STAGE        shift, and go to state 12
    OL_TRACE        shift, and go to state 13
    OL_TRACETABLE   shift, and go to state 14

    $default  reduce using rule 3 (clauselist)

    clauselist      go to state 52
    clause          go to state 17
    materialize     go to state 18
    watch           go to state 19
    watchfine       go to state 20
    stage           go to state 21
    trace           go to state 22
    TraceTable      go to state 23
    fact            go to state 24
    rule            go to state 25
    namedRule       go to state 26
    unnamedRule     go to state 27
    weightedRule    go to state 28
    unweightedRule  go to state 29
    context         go to state 30
    query           go to state 31
    functor         go to state 32
    functorname     go to state 33


State 18

    7 clause: materialize .

    $default  reduce using rule 7 (clause)


State 19

    8 clause: watch .

    $default  reduce using rule 8 (clause)


State 20

    9 clause: watchfine .

    $default  reduce using rule 9 (clause)


State 21

   13 clause: stage .

    $default  reduce using rule 13 (clause)


State 22

   10 clause: trace .

    $default  reduce using rule 10 (clause)


State 23

   11 clause: TraceTable .

    $default  reduce using rule 11 (clause)


State 24

    6 clause: fact .

    $default  reduce using rule 6 (clause)


State 25

    5 clause: rule .

    $default  reduce using rule 5 (clause)


State 26

   29 rule: namedRule .

    $default  reduce using rule 29 (rule)


State 27

   30 rule: unnamedRule .

    $default  reduce using rule 30 (rule)


State 28

   32 unnamedRule: weightedRule .

    $default  reduce using rule 32 (unnamedRule)


State 29

   33 unnamedRule: unweightedRule .

    $default  reduce using rule 33 (unnamedRule)


State 30

   14 clause: context .

    $default  reduce using rule 14 (clause)


State 31

   12 clause: query .

    $default  reduce using rule 12 (clause)


State 32

   28 fact: functor . OL_DOT
   35 unweightedRule: functor . OL_IF termlist OL_DOT
   37               | functor . OL_IF OL_DEL termlist OL_DOT
   39               | functor . OL_IF aggview OL_DOT

    OL_DOT  shift, and go to state 53
    OL_IF   shift, and go to state 54


State 33

   47 functor: functorname . functorbody
   51        | functorname . functorbody OL_AT OL_VAR

    OL_LPAR  shift, and go to state 55

    functorbody  go to state 56


State 34

   56 functorname: OL_NAME .

    $default  reduce using rule 56 (functorname)


State 35

   31 namedRule: OL_NAME unnamedRule .

    $default  reduce using rule 31 (namedRule)


State 36

   35 unweightedRule: functor . OL_IF termlist OL_DOT
   37               | functor . OL_IF OL_DEL termlist OL_DOT
   39               | functor . OL_IF aggview OL_DOT

    OL_IF  shift, and go to state 54


State 37

   34 weightedRule: OL_VALUE unweightedRule .

    $default  reduce using rule 34 (weightedRule)


State 38

   48 functor: OL_VAR OL_SAYS . functorname functorbody
   52        | OL_VAR OL_SAYS . functorname functorbody OL_AT OL_VAR

    OL_NAME  shift, and go to state 34

    functorname  go to state 57


State 39

   36 unweightedRule: OL_DEL functor . OL_IF termlist OL_DOT
   38               | OL_DEL functor . OL_DEL OL_IF termlist OL_DOT

    OL_IF   shift, and go to state 58
    OL_DEL  shift, and go to state 59


State 40

   41 query: OL_QUERY functorname . functorbody OL_DOT

    OL_LPAR  shift, and go to state 55

    functorbody  go to state 60


State 41

   15 materialize: OL_MATERIALIZE OL_LPAR . OL_NAME OL_COMMA tablearg OL_COMMA tablearg OL_COMMA primarykeys OL_RPAR OL_DOT

    OL_NAME  shift, and go to state 61

